src/test/ui/type-alias-impl-trait/generic_nondefining_use.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/generic_nondefining_use.rs:17:5
   |
LL |     5u32
   |     ^^^^
   |
note: used non-generic type `u32` for generic parameter
  --> $DIR/generic_nondefining_use.rs:7:12
   |
LL | type OneTy<T> = impl Debug;
   |            ^

error: unconstrained opaque type
  --> $DIR/generic_nondefining_use.rs:7:17
   |
LL | type OneTy<T> = impl Debug;
   |                 ^^^^^^^^^^
   |
   = note: `OneTy` must be used in combination with a concrete type within the same module

error: non-defining opaque type use in defining scope
  --> $DIR/generic_nondefining_use.rs:22:5
   |
LL | type OneLifetime<'a> = impl Debug;
   |                  -- cannot use static lifetime; use a bound lifetime instead or remove the lifetime parameter from the opaque type
...
LL |     6u32
   |     ^^^^

error: unconstrained opaque type
  --> $DIR/generic_nondefining_use.rs:9:24
   |
LL | type OneLifetime<'a> = impl Debug;
   |                        ^^^^^^^^^^
   |
   = note: `OneLifetime` must be used in combination with a concrete type within the same module

error: non-defining opaque type use in defining scope
  --> $DIR/generic_nondefining_use.rs:27:5
   |
LL |     7u32
   |     ^^^^
   |
note: used non-generic constant `123_usize` for generic parameter
  --> $DIR/generic_nondefining_use.rs:11:21
   |
LL | type OneConst<const X: usize> = impl Debug;
   |                     ^

error: unconstrained opaque type
  --> $DIR/generic_nondefining_use.rs:11:33
   |
LL | type OneConst<const X: usize> = impl Debug;
   |                                 ^^^^^^^^^^
   |
   = note: `OneConst` must be used in combination with a concrete type within the same module

error: aborting due to 6 previous errors

